Fix banner social

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DJ Maks - Wodzirej weselny</title>
+    <title>DJ Maks - Twój wodzirej weselny</title>
+    <meta name="description" content="Zbliża się twoja impreza weselna i jeszcze nie masz muzyki? Nie mogłeś trafić lepiej, sprawię żeby twoja impreza była niezapomniana!">
 
     <link rel="stylesheet" href="./styles/style.css">
 
     <!-- headings -->
     <script src="./scripts/headings/headings.js"></script>
 
+    <meta property="og:image" content="./assets/baner/baner.png" />
 
 </head>
 <body>
