--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DJ Maks - Twój wodzirej weselny</title>
+    <title>Max Garstka – DJ na wesele</title>
     <meta name="description" content="Zbliża się twoja impreza weselna i jeszcze nie masz muzyki? Nie mogłeś trafić lepiej, sprawię żeby twoja impreza była niezapomniana!">
 
     <link rel="stylesheet" href="./styles/style.css">
@@ -87,10 +87,10 @@
         <div class="container">
             <div class="dashboard-content-container">
                 <div class="dashboard-content-container__heading">
-                    <h1>MAKS <br> GARSTKA</h1>
+                    <h1>MAX <br> GARSTKA</h1>
                 </div>
                 <div class="dashboard-content-container__subheading">
-                    <span>ZBLIŻA SIĘ TWOJA IMPREZA WESELNA? DOBRZE TRAFIŁEŚ!</span>
+                    <span>DJ / Konferansjer</span>
                 </div>
                 <div class="dashboard-content-container__buttons">
                     <a href="#informacje" class="btn-secondary">
@@ -125,13 +125,18 @@
                 </div>
                 <div class="information-content-container__content-container">
                     <h2 class="information-content-container__content-container--heading">
-                        moja impreza
+                        KIM JESTEM?
                     </h2>
                     <p class="information-content-container__content-container--text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis quo sit dolor repellendus. Asperiores quisquam recusandae consectetur corporis ratione dolore harum, soluta totam. Aut quibusdam sequi magni assumenda, nesciunt ad.
+                        Cześć, mam na imię Maks i jestem DJ – em, konferansjerem z kilkunastoletnim
+                        doświadczeniem. Lubię to, co robię, lubię ludzi, z którymi współpracuję. Realizując swoje
+                        pasje, pomagam tworzyć niezapomniane chwile dla tych, którzy mnie wybrali. Wykonuję
+                        oprawę muzyczną eventów firmowych, imprez plenerowych i uroczystości rodzinnych.
                     </p>
                     <p class="information-content-container__content-container--text">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis perferendis enim itaque molestiae reiciendis officia. Vero, repellat aliquid reiciendis quod magnam modi ea quo quisquam iusto! Repudiandae error aut tempore!
+                        Jestem człowiekiem profesjonalnym i elastycznym – dbam, aby ludzie, którzy mnie
+                        wybrali, byli zadowoleni ze swej decyzji, a ja z dobrze wykonanego zadania. Konsultuję z
+                        klientem przebieg uroczystości, współpracuję z nim i innymi osobami zaangażowanymi w realizację zadania. Potrafię się dostosować – staram się wzruszać, bawić i wyluzować uczestników imprezy.
                     </p>
                     <div class="information-content-container__content-container--button">
                         <a href="#muzyka" class="btn-primary">
@@ -144,11 +149,34 @@
             </div>
             <div class="information-additional-content-container">
                 <div class="information-additional-content-container__content-container">
+                    <p class="information-additional-content-container__content-container--text">
+                        Mam w swoim repertuarze również ciekawe konkursy i zabawy, które będą
+                        odskocznią od tańca, wprowadzam układy taneczne, a wszystko to w dobrym stylu i
+                        odpowiednim momencie. Stawiam zdecydowanie na dobrą atmosferę i wspólną zabawę.
+                        Dbam, aby uczestnicy bawili się dobrze indywidualnie, a także wspólnie, bo integracja
+                        to nieodłączny element udanej imprezy. <br>
+                        Razem stworzymy optymalny scenariusz Waszego wymarzonego dnia.
+                    </p>
+                </div>
+                <div class="information-additional-content-container__image-container">
+                    <div class="information-additional-content-container__image-container--image"></div>
+                </div>
+            </div>
+            <div class="information-additional-content-container information-additional-content-container-reverse">
+                <div class="information-additional-content-container__content-container">
                     <h2 class="information-additional-content-container__content-container--heading">
-                        DODATKOWE INFO
+                        MOJE STANOWISKO PRACY
                     </h2>
                     <p class="information-additional-content-container__content-container--text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae atque exercitationem dolor facilis, reiciendis unde veniam sapiente iure esse quasi ipsum earum? Tempore necessitatibus debitis laudantium eaque error a natus.
+                        Oferuję stanowisko retro i glamour, oba estetyczne i stylowe, doskonale wpisujące się
+                        w przestrzeń i dające możliwość wyboru.
+                        Stanowisko retro - czarne z ciepłym oświetleniem, lampami retro oraz drewnianymi
+                        wstawkami idealnie wpisuje się w sale rustykalne lub o klasycznym, uniwersalnym wystroju.
+                        Stanowisko glamour - czarno – białe, które doskonale komponuje się z nowoczesnymi
+                        i eleganckimi salami oraz różnorodnym stylem.
+                        Posiadam wysokiej jakości sprzęt muzyczny, który zapewnia odpowiedni standard,
+                        jakość i prestiż przedsięwzięcia. Najwyższa jakość sprzętu oraz moje umiejętności i charyzma
+                        to gwarancja sukcesu.
                     </p>
                 </div>
                 <div class="information-additional-content-container__image-container">
@@ -191,10 +219,22 @@
                 </div>
                 <div class="music-content-container__content-container">
                     <h2 class="music-content-container__content-container--heading">
-                        DOBRA MUZYKA <br> TO PODSTAWA
+                        MUZYKA
                     </h2>
                     <p class="music-content-container__content-container--text">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                        Repertuar, który posiadam jest bardzo szeroki. Gram wyselekcjonowaną muzykę,
+                        która dobieram do okoliczności i miksuję na żywo, utrzymując odpowiednią atmosferę.
+                        Zatem mam odpowiednie zaplecze, aby zbudować niezapomniany muzyczny klimat na
+                        Waszym przyjęciu, odpowiadając na potrzeby gości bawiących się na parkiecie. Nie jestem
+                        ograniczony jednym gatunkiem muzycznym. Najczęściej gram sprawdzone zagraniczne oraz
+                        polskie hity od nowości, po te „nieco” starsze, które poruszą trzy pokolenia.
+                    </p>
+                    <p class="music-content-container__content-container--text">
+                        Współpracuję też z saksofonistą oraz innymi DJ-ami, którzy mogą wzbogacić i
+                        zróżnicować oprawę muzyczną przyjęcia oraz zapewnić Gościom dodatkowe muzyczne
+                        doznania. Repertuar dobieram w zależności od Waszych preferencji muzycznych oraz
+                        opracowanie przebiegu wydarzenia tak, aby spełniło Wasze marzenia i oczekiwania. Z
+                        pewnością postaram się odkryć, co komu w duszy gra.
                     </p>
                     <div class="music-content-container__content-container--button">
                         <a href="https://open.spotify.com/playlist/0JUpiblZQpdtweNeczs6Ek?go=1&sp_cid=6704603e-6e66-450d-9df5-1e414ec2c4b6&utm_source=embed_player_m&utm_medium=desktop&nd=1" target="_blank" class="btn-primary">
@@ -246,7 +286,7 @@
             <div class="contact-content-container">
                 <div class="contact-content-container__content-container">
                     <h2 class="contact-content-container__content-container--heading">
-                        ZRÓBMY MAKSYMALNĄ IMPREZKĘ!
+                        Razem stworzymy niezapomniane przyjęcie z klasą i kulturą.
                     </h2>
                     <span class="contact-content-container__content-container--subheading">
                         Masz jakieś pytania? Z chęcią na nie odpowiem.
@@ -257,12 +297,12 @@
                     <ul>
                         <li>
                             <span>
-                                E-mail: <a href="mailto:">jakiśemaiil@gmail.com</a>
+                                E-mail: <a href="mailto:maxgarstka@o2.pl">maxgarstka@o2.pl</a>
                             </span>
                         </li>
                         <li>
                             <span>
-                                Tel: <a href="tel:">123 123 123</a>
+                                Tel: <a href="tel:+48794013505">794013505</a>
                             </span>
                         </li>
                     </ul>
