--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 <a href="https://www.instagram.com/djmaxgarstka/" rel="noreferrer" target="_blank" class="mobile-social--item">
                                     <i class="fab fa-instagram"></i>
                                 </a>
-                                <a href="tel:" class="mobile-social--item">
+                                <a href="tel:+48794013505" class="mobile-social--item">
                                     <i class="fas fa-phone-square-alt"></i>
                                 </a>
                             </div>
@@ -302,7 +302,7 @@
                         </li>
                         <li>
                             <span>
-                                Tel: <a href="tel:+48794013505">794013505</a>
+                                Tel: <a href="tel:+48794013505">794 013 505</a>
                             </span>
                         </li>
                     </ul>
