configure email send

--- a/index.html
+++ b/index.html
@@ -326,10 +326,10 @@
                         <input type="text" name="_honey" style="display: none;">
                         <input type="hidden" name="_captcha" value="false"> 
 
-                        <input type="text" placeholder="Imię&nbsp;i&nbsp;nazwisko">
-                        <input type="email" placeholder="E-mail">
-                        <input type="tel" placeholder="Numer&nbsp;telefonu">
-                        <textarea name="" placeholder="Wiadomość..."></textarea>
+                        <input type="text" name="Imie i nazwisko" placeholder="Imię&nbsp;i&nbsp;nazwisko">
+                        <input type="email" name="E-mail" placeholder="E-mail">
+                        <input type="tel" name="Tel" placeholder="Numer&nbsp;telefonu">
+                        <textarea name="" name="Wiadomosc" placeholder="Wiadomość..."></textarea>
 
                         <button type="submit" class="btn-primary"> 
                             <span class="button-value">
