configure email send

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                         <input type="text" name="Imie i nazwisko" placeholder="Imię&nbsp;i&nbsp;nazwisko">
                         <input type="email" name="E-mail" placeholder="E-mail">
                         <input type="tel" name="Tel" placeholder="Numer&nbsp;telefonu">
-                        <textarea type="text" name="Wiadomosc" placeholder="Wiadomość..."></textarea>
+                        <textarea id="wiadomosc" name="Wiadomosc" placeholder="Wiadomość..." required></textarea>
 
                         <button type="submit" class="btn-primary"> 
                             <span class="button-value">
