--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                     </div>
                 </div>
                 <div class="contact-content-container__form-container">
-                    <form action="https://formsubmit.co/bartekmachu@gmail.com" method="POST">
+                    <form action="https://formsubmit.co/maxgarstka@o2.pl" method="POST">
                         <h4 class="form-heading">
                             PRZEŚLIJ MI WIADOMOŚĆ
                         </h4>
