--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <div class="navigation-content-container">
                 <div class="navigation-content-container__logo-list-holder">
                     <div class="navigation-content-container__logo-list-holder--logo">
-                        <a class="nav-logo" href="#poczatek">MG</a>
+                        <a class="nav-logo" href="#poczatek">
+                            <img src="./assets/logo/logo-svg.svg" alt="logo">
+                        </a>
                     </div>
                     <div class="navigation-content-container__logo-list-holder--list">
                         <button class="hamburger-menu">
@@ -347,7 +349,7 @@
             <div class="footer-content-container">
                 <div class="footer-content-container__logo-container">
                     <a href="#poczatek" class="footer-content-container__logo-container--logo">
-                        MG
+                        <img src="./assets/logo/logo-svg.svg" alt="logo">
                     </a>
                 </div>
                 <div class="footer-content-container__copyright-container">
