add new fucntionality + imgs

--- a/index.html
+++ b/index.html
@@ -328,9 +328,9 @@
                         <input type="text" name="_honey" style="display: none;">
                         <input type="hidden" name="_captcha" value="false"> 
 
-                        <input type="text" name="Imie i nazwisko" placeholder="Imię&nbsp;i&nbsp;nazwisko">
-                        <input type="email" name="E-mail" placeholder="E-mail">
-                        <input type="tel" name="Tel" placeholder="Numer&nbsp;telefonu">
+                        <input type="text" name="Imie i nazwisko" placeholder="Imię&nbsp;i&nbsp;nazwisko" required>
+                        <input type="email" name="E-mail" placeholder="E-mail" required>
+                        <input type="tel" name="Tel" placeholder="Numer&nbsp;telefonu" required>
                         <textarea id="wiadomosc" name="Wiadomosc" placeholder="Wiadomość..." required></textarea>
 
                         <button type="submit" class="btn-primary"> 
