--- a/index.html
+++ b/index.html
@@ -175,9 +175,7 @@
         <div class="container">
             <div class="baners-content-container">
                 <div class="baners-content-container__heading-container">
-                    <h2 class="baners-content-container__heading-container--heading">
-                        ZAPEWNIAM <br> NIEZAPOMNIANE <br> CHWILE!
-                    </h2>
+                    
                 </div>
                 <div class="baners-content-container__baners-container">
                     <div class="baners-content-container__baners-container--baner"></div>
@@ -261,6 +259,12 @@
                         <div class="instagram-content-container__image-container--item2"></div>
                         <div class="instagram-content-container__image-container--item2"></div>
                     </div>
+                    <div class="floor">
+                        <div class="instagram-content-container__image-container--item3"></div>
+                        <div class="instagram-content-container__image-container--item3"></div>
+                        <div class="instagram-content-container__image-container--item3"></div>
+                        <div class="instagram-content-container__image-container--item3"></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -318,7 +322,7 @@
 
                         <button type="submit" class="btn-primary"> 
                             <span class="button-value">
-                                IMPREZA
+                                WYŚLIJ
                             </span>
                         </button>
                     </form>
